--- a/src/components/App/index.scss
+++ b/src/components/App/index.scss
@@ -1,5 +1,5 @@
 @import '../../styles/fonts/_fonts.scss';
-@import '../../styles/colors.scss';
+@import '../../styles/_colors.scss';
 
 .app {
   font-family: 'FuturaBook';
