--- a/src/components/Title/index.scss
+++ b/src/components/Title/index.scss
@@ -1,4 +1,5 @@
 @import '../../styles/fonts/fonts';
+@import '../../styles/colors';
 
 .title {
   background-color: #f7fafc;
@@ -29,7 +30,8 @@
   }
 
   &__current-link {
-    font-size: 0.8rem;
+    font-size: 1rem;
     font-family: 'FuturaBold';
+    color: $black;
   }
 }
