--- a/src/components/Purchase/index.scss
+++ b/src/components/Purchase/index.scss
@@ -10,7 +10,7 @@
   }
 
   &__wrapper {
-    padding: 60px 0px;
+    padding: 60px 0;
     display: flex;
     justify-content: space-between;
   }
@@ -29,7 +29,7 @@
     width: 700px;
     height: 300px;
     border: 1px solid $yellow;
-    padding: 30px 30px;
+    padding: 30px;
     
     &-title {
       font-size: 1.5rem;
@@ -39,12 +39,15 @@
     &-content {
       display: flex;
       margin-top: 5px;
-      padding: 10px 10px 10px 10px;
+      padding: 10px;
       background-color: $lightyellow;
       &-text {
         word-spacing: 1;
         width: 300px;
         text-align: justify;
+        &-list {
+          word-spacing: 2px;
+        }
       }
       
     }
