--- a/src/components/Contacts/index.scss
+++ b/src/components/Contacts/index.scss
@@ -111,7 +111,8 @@
         
         &-phone {
           margin-top: 2px;
-          display: block;
+          display: inline-block;
+
         }
   
         &-phone:hover {
