--- a/src/components/Contacts/index.scss
+++ b/src/components/Contacts/index.scss
@@ -116,7 +116,7 @@
         }
   
         &-phone:hover {
-          border-bottom: 1px dashed; 
+          text-decoration: underline; 
         }
   
         &-mail {
