--- a/src/components/Export/index.scss
+++ b/src/components/Export/index.scss
@@ -20,7 +20,7 @@
     border: 2px solid $white;
     width: 700px;
 
-    table:first-child  {
+    &:first-child  {
       font-family: 'FuturaBold';
     }
   }
