--- a/src/App/index.scss
+++ b/src/App/index.scss
@@ -4,7 +4,7 @@
 .app {
   font-family: 'FuturaBook';
   color: $black;
-  height: 100vh;
+  min-height: 100vh;
   background-color: $grey;
 
   & a {
