--- a/src/components/Header/HeaderItem/index.scss
+++ b/src/components/Header/HeaderItem/index.scss
@@ -5,6 +5,10 @@
   font-size: 1.5rem;
   font-family: 'FuturaBold';
 
+  &_active {
+    color: $blue;
+  }
+
   &:hover {
     cursor: pointer;
     color: $blue;
