--- a/src/components/Product/index.scss
+++ b/src/components/Product/index.scss
@@ -1,3 +1,5 @@
+@import '../../styles/colors';
+
 .product {
   &__container {
     max-width: 1670px;
@@ -6,14 +8,52 @@
   }
 
   &__wrapper {
-    padding: 60px 0;
+    padding: 40px 0;
     display: flex;
     flex-direction: column;
   }
 
+  &__title {
+    margin-top: 20px;
+    font-size: 1.2rem;
+    font-family: 'FuturaBold';
+  }
+
+  &__name {
+    font-size: 1.4rem;
+    font-family: 'FuturaBold';
+  }
+
   &__img {
+    width: 400px;
+    position: relative;
+    &-image {
+      width: 300px;
+      height: 250px;
+      max-width: 100%;
+      height: auto;
+      display: block;
+      position: relative;
+      z-index: 2;
+      box-shadow: 4px 4px 20px 0 rgba(0,0,0,.25)
+    }
+  }
+
+  &__img::after{
+    content:"";
     width: 300px;
-    height: 250px;
-    margin-bottom: 20px;;
+    height: calc(100% - 5px);
+    position: absolute;
+    top: 10px;
+    left: 25px;
+    z-index: 1;
+    border: 5px solid $blue;
+  }
+  
+
+  &__info {
+    text-align: justify;
+    white-space: pre-wrap;
+    font-size: 1.1em
   }
 }
