--- a/src/components/Production/Card/index.scss
+++ b/src/components/Production/Card/index.scss
@@ -10,24 +10,33 @@
   &__wrapper {
     width: 100%;
     height: 100%;
-    padding: 15px;
+    
     display: flex;
     flex-direction: column;
+    
   }
+
+  &__focus {
+    border: 1px solid black;
+    border-radius: 8px;
+  }
+
 
   &__img {
     width: 230px;
     height: 200px;
-
+    border-radius: 8px 8px 0px 0px; 
     &:hover {
       cursor: pointer;
     }
   }
 
   &__title {
-    margin-top: 20px;
+    font-family: 'FuturaBold';
     text-align: center;
-
+    height: 40px;
+    background-color: white;
+    border-radius: 0px 0px 8px 8px; 
     &:hover {
       cursor: pointer;
     }
