--- a/src/components/Production/Card/index.scss
+++ b/src/components/Production/Card/index.scss
@@ -1,6 +1,11 @@
 @import '../../../styles/colors';
 
 .card {
+  &:hover {
+    .card__wrapper {
+      box-shadow: 15px 15px 15px -10px rgba(0, 0, 0, .5);
+    }
+  }
   &__container {
     // width: 300px;
     // height: 300px;
@@ -8,35 +13,29 @@
   }
 
   &__wrapper {
+    transition: 1s;
     width: 100%;
     height: 100%;
-    
     display: flex;
     flex-direction: column;
-    
-  }
-
-  &__focus {
-    border: 1px solid black;
     border-radius: 8px;
   }
 
-
   &__img {
+    border-radius: 8px 8px 0px 0px;
     width: 230px;
     height: 200px;
-    border-radius: 8px 8px 0px 0px; 
     &:hover {
       cursor: pointer;
     }
   }
 
   &__title {
+    border-radius: 0px 0px 8px 8px;
     font-family: 'FuturaBold';
     text-align: center;
     height: 40px;
     background-color: white;
-    border-radius: 0px 0px 8px 8px; 
     &:hover {
       cursor: pointer;
     }
