--- a/src/components/Product/index.scss
+++ b/src/components/Product/index.scss
@@ -24,6 +24,27 @@
     font-family: 'FuturaBold';
   }
 
+  &__grade {
+    &-item {
+      &-active {
+        padding: 2px;
+        text-align: center;
+        border: 4px solid $blue;
+        width: 268px;
+        display: block;
+        font-size: 1.2em;
+        cursor: pointer;
+      }
+      padding: 2px;
+      text-align: center;
+      border: 1px solid $blue;
+      width: 268px;
+      display: block;
+      font-size: 1.2em;
+      cursor: pointer;
+    }
+  }
+
   &__img {
     width: 400px;
     position: relative;
