--- a/src/components/Production/index.scss
+++ b/src/components/Production/index.scss
@@ -6,9 +6,13 @@
   }
 
   &__wrapper {
+    
+  }
+  
+  &__cards {
     padding: 60px 0;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     flex-wrap: wrap;
-  }
+  } 
 }
