--- a/src/components/Product/index.scss
+++ b/src/components/Product/index.scss
@@ -55,15 +55,12 @@
   &__content {
     margin-top: 40px;
     &-info {
+      cursor: default;
       white-space: pre-line;
       text-align: justify;
       font-size: 1.05em;
     }
   }
-
-  
-
-  
 
   &__image {
     width: 400px;
@@ -92,6 +89,9 @@
   }
 
   table {
+    @media(max-width: 375px){
+      width: 340px;
+    }
     margin: auto;
     margin-top: 20px;
     border-collapse: collapse;
@@ -100,6 +100,9 @@
   }
 
   caption {
+    @media(max-width: 375px){
+      font-size: 0.8em;
+    }
     padding: 10px;
     color: $white ;
     font-family: 'FuturaBold';
@@ -108,6 +111,9 @@
   }
 
   td, th {
+    @media(max-width: 375px){
+      font-size: 0.6em;
+    }
     padding: 5px;
     border: 1px solid $black;
     font-size: 1.1rem;
