image for productions and adaptability components

--- a/src/components/Contacts/index.scss
+++ b/src/components/Contacts/index.scss
@@ -7,6 +7,9 @@
     max-width: 1670px;
     margin: 0 auto;
     padding: 0 15px;
+    @media(max-width: 375px){
+      padding: 0;
+    }
   }
 
   &__wrapper {
@@ -29,6 +32,10 @@
         }
 
         &-text {
+          @media(max-width: 375px){
+            font-size: 0.7rem;
+            width: 360px;
+          }
           font-size: 1.2rem;
         }
       }
@@ -36,7 +43,13 @@
 
     &-bottom {
       display: flex;
-      width: 600px;
+      flex-wrap: wrap;
+      @media(max-width: 375px){
+        font-size: 0.6rem;
+        width: 360px;
+        margin-top: 10px;
+      }
+      width: 800px;
       margin-top: 20px;
     }
 
@@ -54,6 +67,11 @@
         }
 
         &-text {
+          @media(max-width: 375px){
+            font-size: 0.8rem;
+            width: 360px;
+          }
+          width: 160px;
           font-size: 1.1rem;
           font-family: 'FuturaBold';
         }
@@ -63,6 +81,10 @@
     &-mail {
       display: flex;
       margin-left: 20px;
+      @media(max-width: 375px){
+        margin-left: 0px;
+        margin-top: 10px
+      }
 
       &-icon {
         margin: 10px;
@@ -75,6 +97,10 @@
         }
 
         &-text {
+          @media(max-width: 375px){
+            font-size: 0.8rem;
+            width: 360px;
+          }
           font-size: 1.1rem;
         }
       }
@@ -83,7 +109,11 @@
 
   &__container {
     display: flex;
+    flex-wrap: wrap;
     padding-top: 20px;
+    @media(max-width: 375px){
+      padding-top: 10px;
+    }
 
     &-title {
       font-family: 'FuturaBold';
@@ -94,21 +124,37 @@
     &_workers {
       padding: 5px;
       width: 600px;
+      &-title {
+        padding: 5px;
+        width: 300px;
+      }
       &-item {
         margin: 10px;
+        @media(max-width: 375px){
+          width: 360px;
+        }
 
         &-position {
           font-family: 'FuturaBold';
           font-size: 1.1rem;
+          @media(max-width: 375px){
+            font-size: 0.6rem;
+          }
         }
 
         &-name {
           font-size: 1.1rem;
+          @media(max-width: 375px){
+            font-size: 0.6rem;
+          }
         }
 
         &-phone {
           margin-top: 2px;
           display: inline-block;
+          @media(max-width: 375px){
+            font-size: 0.6rem;
+          }
         }
         &-phone:hover {
           text-decoration: underline;
@@ -117,6 +163,9 @@
         &-mail {
           margin-top: 2px;
           display: block;
+          @media(max-width: 375px){
+            font-size: 0.6rem;
+          }
         }
       }
     }
