--- a/src/components/Production/Price/index.scss
+++ b/src/components/Production/Price/index.scss
@@ -19,10 +19,22 @@
     cursor: default;
     display: flex;
     align-items: center;
+    &-image {
+      width: 80px;
+      height: 80px;
+      margin-right: 30px;
+      @media(max-width: 375px){
+        width: 40px;
+        height: 40px;
+      }
+    }
     &-value {
       margin-left: 10px;
       color: white;
       &-title {
+        @media(max-width: 375px){
+          font-size: 1em;
+        }
         font-size: 2em;
         font-family: 'FuturaBold';
       }
@@ -35,6 +47,9 @@
   }
 
   &__button {
+    @media(max-width: 375px){
+      width: 150px;
+    }
     text-decoration: none;
     display: inline-block;
     margin: 6px;
