--- a/src/components/MainPage/index.scss
+++ b/src/components/MainPage/index.scss
@@ -12,25 +12,33 @@
 
   &__history {
     background-color: white;
+    padding-top: 140px;
+    @media(max-width: 800px){
+      padding-top: 60px;
+    }
     &-content {
-      height: 720px;
-      padding: 60px 0px 0px 90px;
+      height: 100%;
+      padding: 20px 20px 0px 90px;
       background-size: cover;
       background-image: url('../../styles/images/background.png');
+      background-position: left;
       @media(max-width: 375px){
-        height: 1500px;
-        padding: 60px 0px 0px 20px;
-        background-image: none;
+        padding: 20px 20px 0px 20px;
       }
+      @media(max-width: 850px){
+        background-image: none;
+        padding: 20px 20px 0px 20px;
+      }
+      
       &-title {
         font-size: 2.8em;
         font-family: 'FuturaBold';
       }
       &-text {
-        @media(max-width: 375px){
-          width: 340px;
+        @media(max-width: 850px){
+          padding-right: 0%;
         }
-        width: 780px;
+        padding-right: 29%;
         text-align: justify;
       }
     }
@@ -38,38 +46,38 @@
   }
 
   &__company {
-    height: 1000px;
+    height: 100%;
     background-color: $blue;
-    @media(max-width: 375px){
-      height: 2300px;
+    padding: 20px 20px 0px 90px;
+    @media(max-width: 700px){
+      padding: 20px 20px 0px 20px;
     }
     &-content {
+      @media(max-width: 700px){
+        flex-wrap: wrap;
+      }
       display: flex;
-      flex-wrap: wrap;
       justify-content: center;
       flex-direction: row;
       &-image {
+        @media(max-width: 375px){
+          width: 200px;
+          height: 200px;
+        }
+        @media(max-width: 700px){
+          margin-right: 0px;
+        }
         width: 300px;
         height: 300px;
         margin-top: 80px;
+        margin-right: 20px;
       }
       &-title {
-        @media(max-width: 375px){
-          font-size: 1.8em;
-          padding: 0px;
-        }
-        padding: 0px 0px 0px 40px;
         font-size: 2.8em;
         font-family: 'FuturaBold';
         color: white;
       }
       &-text {
-        @media(max-width: 375px){
-          width: 340px;
-          padding: 0px 0px 0px 0px;
-        }
-        padding: 0px 0px 0px 40px;
-        width: 720px;
         text-align: justify;
         color: white;
       }
@@ -78,7 +86,6 @@
 
   &__quality {
     background-color: white;
-    margin-top: 40px;
     &-header {
       @media(max-width: 375px){
         padding: 0px 0px 0px 20px;
@@ -114,18 +121,26 @@
   }
 
   &__shareholder {
-    height: 120px;
+    padding: 30px 0;
     background-color: $blue;
     display: flex;
-    padding: 20px 0;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+    @media(max-width: 900px){
+      justify-content: center;
+    }
     &-title {
       @media(max-width: 375px){
         font-size: 1.2em;
         padding-left: 20px;
       }
-      font-size: 2.8em;
+      @media(max-width: 600px){
+        font-size: 1.4em;
+        padding-left: 20px;
+      }
+      
+      font-size: 2.3em;
       font-family: 'FuturaBold';
       color: white;
       padding-left: 40px;
@@ -200,11 +215,17 @@
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
+      
+      
     }
 
     &-card {
+      width: auto;
       @media(max-width: 375px){
         padding: 20px 20px 20px 20px;
+      }
+      @media(min-width: 1200px){
+        width: 480px;
       }
       padding: 20px 40px 20px 40px;
       display: flex;
@@ -217,11 +238,9 @@
       &-text {
         @media(max-width: 375px){
           font-size: 1em;
-          width: 340px;
         }
         margin-top: 10px;
         cursor: default;
-        width: 480px;
         text-align: center;
         font-size: 1.1em;
         text-align: justify;
