--- a/src/components/MobileHeader/index.scss
+++ b/src/components/MobileHeader/index.scss
@@ -14,7 +14,9 @@
     align-items: center;
     padding: 15px 0;
   }
-
+  span {
+    display: block;
+  }
   &__logo {
     @media(max-width: 800px){
       width: 180px;
@@ -28,15 +30,42 @@
   }
 
   &__menu {
-    background: black;
+    background: $white;
     position: fixed;
-    height: 100vh;
-    width: 100vw; 
+    height: auto;
+    width: 100%;
     top: 0;
-    right: 0;
-    transition: .3s;
+    left: 0px;
+    right: 0px;
+    transition: .8s;
+    &-header {
+      background: $blue;
+      padding: 18px 0px 18px 20px;
+    }
+    &-logo {
+      display:block;
+      width: 196px;
+      height: 44px;
+    }
+    &-items {
+      padding: 20px 0px 20px 12px;
+      height: auto;
+      flex-wrap: wrap;
+      width: 150px;
+    }
+    &-back {
+      position: absolute;
+      right: 15px;
+      top: 31px;
+      width: 25px;
+      height: 25px;
+      &:hover {
+        -webkit-transform: scale(1.2);
+        -ms-transform: scale(1.2);
+        transform: scale(1.2);
+      }
+    }
     &-button {
-      margin-bottom: 8px;
       height: auto;
       width: 25px;
       stroke: $blue !important;
