--- a/src/components/Purchase/index.scss
+++ b/src/components/Purchase/index.scss
@@ -31,9 +31,9 @@
     height: 320px;
     border: 1px solid $yellow;
     padding: 30px;
-    @media(max-width: 375px){
-      width: 340px;
-      height: 300px;
+    @media(max-width: 420px){
+      width: 100%;
+      height: 100%;
       padding: 10px;
     }
 
@@ -43,7 +43,7 @@
     }
 
     &-image {
-      @media(max-width: 375px){
+      @media(max-width: 725px){
         display: none;
       }
     }
@@ -56,7 +56,6 @@
         margin-top: 5px;
         padding: 10px;
       }
-
       &-text {
         word-spacing: 1px;
         width: 300px;
