--- a/src/components/Product/index.scss
+++ b/src/components/Product/index.scss
@@ -1,4 +1,5 @@
 @import '../../styles/colors';
+@import '~compass-mixins/lib/compass/css3';
 
 .product {
   &__container {
@@ -29,21 +30,69 @@
     &-grade {
       &-item {
         &-active {
-          padding: 2px;
+          @media(max-width: 400px){
+            width: 100%;
+          }
+          margin: 10px 0px 10px 0px;
+          display: flex;
+          justify-content: center;
+          flex-direction: column;
+          width: 300px;
+          height: 44px;
+          text-decoration: none;
+          border: 2px solid #f4f4f4;
           text-align: center;
-          border: 4px solid $blue;
-          width: 290px;
-          display: block;
-          font-size: 1.2em;
-          cursor: pointer;
+          position: relative;
+          transition: all .35s;
+          background: $blue;
+          color: #fff !important;
+          transition: none; 
+          font-size: 1.4rem !important;
+          span{
+            position: relative;
+            z-index: 2;
+            cursor: pointer;
+            font-size: 1.25rem !important;
+          }
         }
-        padding: 2px;
+        @media(max-width: 400px){
+          width: 100%;
+        }
+        margin: 10px 0px 10px 0px;
+        width: 300px;
+        height: 44px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        font-size: 18px;
+        text-decoration: none;
+        color: #333;
+        border: 2px solid $blue !important;
         text-align: center;
-        border: 1px solid $blue;
-        width: 290px;
-        display: block;
-        font-size: 1.2em;
-        cursor: pointer;
+        position: relative;
+        transition: all .35s;
+        span{
+          position: relative;
+          z-index: 2;
+          cursor: pointer;
+          font-size: 1.25rem !important;
+        }
+        &:after{
+          position: absolute;
+          content: "";
+          top: 0;
+          left: 0;
+          width: 0;
+          height: 100%;
+          background: $blue;
+          transition: all .35s;
+        }
+        &:hover {
+          color: #fff;
+        }
+        &:hover:after{
+          width: 100%;
+        }
       }
       &-name {
         font-size: 1.2rem;
@@ -63,32 +112,13 @@
   }
 
   &__image {
-    width: 400px;
-    position: relative;
-    &-icon {
-      width: 300px;
-      height: 250px;
-      max-width: 100%;
-      height: auto;
-      display: block;
-      position: relative;
-      z-index: 2;
-      box-shadow: 4px 4px 20px 0 rgba(0,0,0,.25)
+    @media(max-width: 400px){
+      width: 100%;
     }
-  }
-
-  &__image:after{
-    @media(max-width: 355px){
-      display: none
-    }
-    content:"";
-    width: 300px;
-    height: calc(100% - 5px);
-    position: absolute;
-    top: 10px;
-    left: 25px;
-    z-index: 1;
-    border: 5px solid $blue;
+    margin: 20px 60px 0px 0px;
+    height: 250px;
+    width: 360px;
+    box-shadow: 15px 15px 15px -10px rgba(0, 0, 0, .5);
   }
 
   table {
