--- a/src/components/Product/index.scss
+++ b/src/components/Product/index.scss
@@ -94,7 +94,8 @@
         }
       }
       &-name {
-        font-size: 1.2rem;
+        padding-top: 30px ;
+        font-size: 2rem;
         font-family: 'FuturaBold';
       }
     }
@@ -107,6 +108,9 @@
       white-space: pre-line;
       text-align: justify;
       font-size: 1.05em;
+    }
+    &-qrcode {
+      float: right;
     }
   }
 
