--- a/src/components/Export/index.scss
+++ b/src/components/Export/index.scss
@@ -2,6 +2,9 @@
 
 .export {
   background-color: $white;
+  @media(min-width: 1920px){
+    min-height: calc(100vh - 462px);
+  }
 
   &__container {
     max-width: 1670px;
