--- a/src/components/Product/index.scss
+++ b/src/components/Product/index.scss
@@ -1,6 +1,7 @@
 @import '../../styles/colors';
 
 .product {
+  min-height: calc(100vh - 462px);
   &__container {
     max-width: 1670px;
     margin: 0 auto;
